spacing fix on a few pages

--- a/commerce/auctions/static/auctions/styles.css
+++ b/commerce/auctions/static/auctions/styles.css
@@ -39,6 +39,7 @@ hr{
 }
 .nav-link{
     color: #707070!important;
+    font-size: 15px;
     
 }
 .nav-link:hover{
@@ -79,8 +80,10 @@ hr{
 }
 .btn{
     padding: 5px 30px!important;
+    margin-bottom: 20px;
 }
 
 .form-control{
     margin-bottom: 10px;
+    margin-left: 10px;
 }
